Fix scrollbar issue

--- a/styles/base.css
+++ b/styles/base.css
@@ -31,12 +31,11 @@ body {
 }
 
 .parent-scroller-free {
-  top: 0;
-  left: 0;
+  position: relative;
   width: 100%;
-  height: 100%;
-  overflow: hidden;
-  /* pointer-events: none; */
+  min-height: 100vh;
+  overflow: visible;
+  background: transparent;
 }
 
 /* customize scrollbar */
